@@ -149,7 +149,8 @@ protected:
                     string *json,
                     vector<string> *envs,
                     vector<string> *more_json, // Add this json "key"="value" strings.
-                    vector<string> *selected_fields); // Only print these fields.
+                    vector<string> *selected_fields, // Only print these fields.
+                    bool pretty_print); // Insert newlines and indentation.
     // Json fields cannot be modified expect by adding conversions.
     // Json fields include all values except timestamp_ut, timestamp_utc, timestamp_lt
     // since Json is assumed to be decoded by a program and the current timestamp which is the
