@@ -1,4 +1,6 @@
 
+Probutus added support for the heat meter Zenner Celsius C5 ISF. Thanks Probutus!
+
 Added MicroClima heat meter.
 
 MaxPeal helped add ANYID as a synonym for '*' when listening to any meter id.
